Fix btn size on tablet

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -428,8 +428,8 @@ main {
 
   .section-portolio .link-more {
     margin: 180px 8px 8px 8px;
-    padding: 10px;
-    font-size: 12px;
+    padding: 14px;
+    font-size: 18px;
   }
 
   .section-portolio a {
